# wireworld

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  hie.yaml  report.html  stack.yaml  wireworld.cabal
app/: Genetic.hs  Main.hs  Options.hs
benchmark/: Main.hs
data/: example.ww  or-gate.ww  victor-and.ww  victor_or.ww  xor-gate.ww
golden/TextDisplay.printWireWorld.TextDisplay.boxCell.ww/: actual  golden
golden/TextDisplay.printWireWorld.TextDisplay.coloredCell.ww/: actual  golden
golden/TextDisplay.printWireWorld.TextDisplay.rosetaCell.ww/: actual  golden
golden/WireWorld.runSteps_100.ww/: actual  golden
src/: Genetic.hs  Prelude.hs  TextDisplay.hs  WireWorld.hs  Wireworld.hs
src/Data/: CubicalHexCoords.hs  MirrorWorld.hs  MultiIntSet.hs  WireWorld.hs
test/: GeneticSpec.hs  Spec.hs  TextDisplaySpec.hs  WireWorldSpec.hs
test/Data/: MultiIntSetSpec.hs  WireWorldSpec.hs
test/Test/: Utils.hs
