cabal-version:       2.0
name:                wireworld
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/Nolrai/wireworld
bug-reports:         https://github.com/Nolrai/wireworld/issues
license:             MIT
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw.work@gmail.com
copyright:           2020 Christopher A. Upshaw
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/Nolrai/wireworld.git

library
  hs-source-dirs:      src
  exposed-modules:     WireWorld
                       Prelude
                       Data.MultiIntSet

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude
                     , containers ^>= 0.6
                     , vector
                     , mtl
                     , pretty-terminal
                     , megaparsec
                     , text

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable wireworld
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , wireworld
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite wireworld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       WireWorldSpec
                     , Data.MultiIntSetSpec
                     , Test.Utils
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , wireworld
                     , relude
                     , containers
                     , hspec
                     , hspec-smallcheck
                     , smallcheck
                     , QuickCheck
                     , megaparsec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Werror
                       -Wno-orphans
                       -fno-ignore-asserts

  default-language:    Haskell2010

benchmark wireworld-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , gauge
                     , wireworld
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
