cabal-version:       2.0
name:                wireworld
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/Nolrai/wireworld
bug-reports:         https://github.com/Nolrai/wireworld/issues
license:             MIT
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw.work@gmail.com
copyright:           2020 Christopher A. Upshaw
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/Nolrai/wireworld.git

library
  hs-source-dirs:      src
  exposed-modules:     WireWorld
                       Prelude
                       Data.MultiIntSet
                       TextDisplay
                       Data.WireWorld
                       Data.MirrorWorld
                       Genetic

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude
                     , containers ^>= 0.6
                     , vector
                     , mtl
                     , pretty-terminal
                     , megaparsec
                     , text
                     , with-utf8
                     , lens
                     , linear
                     , moo
                     , array



  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Werror
                       -Wwarn=redundant-constraints
                       -Wno-deprecations

executable wireworld
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , wireworld
                     , relude
                     , optparse-applicative
                     , megaparsec ^>= 8.0.0
                     , mtl ^>= 2.2.2
                     , text ^>= 1.2.4.0
                     , moo
                     , linear
                     , vector
                     , containers ^>= 0.6
                     , with-utf8
                     , lens

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Werror
                       -Wwarn=redundant-constraints
                       -Wno-orphans

  default-language:    Haskell2010

test-suite wireworld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       WireWorldSpec
                     , Data.MultiIntSetSpec
                     , Test.Utils
                     , TextDisplaySpec
                     , Data.WireWorldSpec
                     , GeneticSpec

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , wireworld
                     , relude
                     , containers
                     , hspec
                     , hspec-smallcheck
                     , smallcheck
                     , hedgehog
                     , hspec-hedgehog
                     , megaparsec
                     , hspec-golden
                     , mtl ^>= 2.2.2
                     , template-haskell
                     , vector >= 0.12.1.2
                     , with-utf8

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Werror
                       -Wwarn=redundant-constraints
                       -Wno-orphans
                       -fno-ignore-asserts

  default-language:    Haskell2010

benchmark wireworld-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , gauge
                     , wireworld
                     , relude
                     , megaparsec
                     , with-utf8

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Werror
                       -Wwarn=redundant-constraints
                       -Wno-orphans

  default-language:    Haskell2010
